--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "supervisor server/index.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,8 +13,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.5",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.1",
     "lucide-react": "^0.487.0",
+    "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.0",
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
